# career-scout-ai

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  setup-local-linux.sh  setup-vm.sh  setup.sh
config/agents/: best_recommendations.md
deploy/: career-scout-ai.service  career-scout-ai.timer
docs/: architecture.md  legal.md  local-linux-setup-guide.md  project-plan.md  setup-guide.md  vm-setup-guide.md
scripts/: explore_db.py
src/career_scout_ai/: config.py  main.py
src/career_scout_ai/llm/: __init__.py  ollama_client.py  openrouter_client.py
src/career_scout_ai/scoring/: engine.py  prompts.py
src/career_scout_ai/scraper/portals/: justjoinit.py  nofluffjobs.py  welcometothejungle.py
src/career_scout_ai/storage/: database.py  dedup.py  models.py
src/career_scout_ai/storage/migrations/: env.py
src/career_scout_ai/storage/migrations/versions/: 426b736263b8_add_agent_scores_table.py  5f79c83bdc41_add_workplace_type_and_contract_types_.py  76a2e6d7dfed_initial_tables.py
src/career_scout_ai/web/: app.py
src/career_scout_ai/web/templates/: index.html
tests/: test_dedup.py  test_justjoinit_parsing.py  test_nofluffjobs_parsing.py  test_ollama_client.py  test_openrouter_client.py  test_scoring_engine.py  test_scoring_prompts.py  test_welcometothejungle_parsing.py
