[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-scout-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    "alembic",
]

[project.scripts]
career-scout-ai = "career_scout_ai.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "mypy>=1.0",
    "ruff>=0.8",
    "pandas>=2.0",
    "pytest>=8.0",
    "pytest-httpx>=0.35",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax for target Python version)
    "B",    # flake8-bugbear (common bug patterns)
    "SIM",  # flake8-simplify (simplifiable code)
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
